# SafeEDGE

./: .gitignore  README.md
.github/workflows/: ci-git.yaml
common_server/: CMakeLists.txt
common_server/include/safe_edge/server/common/: PilotServerClient.hpp  PilotServerPayloadParser.hpp
common_server/src/: PilotServerClient.cpp  PilotServerPayloadParser.cpp
common_server/test/: launch_server_common_test.sh  test_server_common.cpp
fast_dds/docker/: edge.Dockerfile  edge.test.Dockerfile  server-test-entrypoint.sh  server.Dockerfile  server.test.Dockerfile  vehicle-entrypoint.sh  vehicle.Dockerfile
fast_dds/edge/: CMakeLists.txt
fast_dds/edge/include/safe_edge/edge_module/common/: HeaderFactory.hpp  RuntimeConfig.hpp  TopicNames.hpp
fast_dds/edge/include/safe_edge/edge_module/nodes/: EdgeGatewayNode.hpp
fast_dds/edge/src/common/: HeaderFactory.cpp  RuntimeConfig.cpp  TopicNames.cpp
fast_dds/edge/src/logic/: EdgeAdvisor.cpp
fast_dds/edge/src/nodes/: EdgeGatewayNode.cpp
fast_dds/edge/test/: test_edge_integration.cpp
fast_dds/idl/: common.hpp  commonCdrAux.hpp  commonCdrAux.ipp  commonPubSubTypes.cxx  commonPubSubTypes.hpp  commonTypeObjectSupport.cxx  commonTypeObjectSupport.hpp  edge.hpp  edgeCdrAux.hpp  edgeCdrAux.ipp  edgePubSubTypes.cxx  edgePubSubTypes.hpp  edgeTypeObjectSupport.cxx  edgeTypeObjectSupport.hpp  pilot_server.hpp  pilot_serverCdrAux.hpp  pilot_serverCdrAux.ipp  pilot_serverPubSubTypes.cxx  pilot_serverPubSubTypes.hpp  pilot_serverTypeObjectSupport.cxx  pilot_serverTypeObjectSupport.hpp
fast_dds/server/: CMakeLists.txt
fast_dds/server/include/safe_edge/server/common/: PilotServerPublishHelper.hpp  RuntimeConfig.hpp  TopicNames.hpp
fast_dds/server/include/safe_edge/server/nodes/: ServerNode.hpp
fast_dds/server/src/common/: PilotServerPublishHelper.cpp  RuntimeConfig.cpp  TopicNames.cpp
fast_dds/server/src/nodes/: ServerNode.cpp
fast_dds/server/test/: test_server_integration.cpp
idl/: common.idl  edge.idl  internal.idl  pilot_server.idl
qnx/targets/qemu-qnx800-x86_64/: mkqnximage-wrapper.sh
qnx/targets/qemu-qnx800-x86_64-hypervisor/local/: options
qnx/targets/qemu-qnx800-x86_64-hypervisor/local/snippets/: data_files.opt_guest
qnx/targets/qemu-qnx800-x86_64/local/: options
qnx/targets/qvm-safe-edge-qnx800-x86_64/local/: options
qnx/targets/qvm-safe-edge-qnx800-x86_64/local/snippets/: ifs_files.custom
qnx/targets/qvm-safe-edge-qnx800-x86_64/local/variants/non-safety/: options
qnx/toolchains/: qnx8.cmake
safe_dds/edge/: CMakeLists.txt
safe_dds/edge/include/safe_edge/edge_module/common/: RuntimeConfig.hpp
safe_dds/edge/include/safe_edge/edge_module/logic/: EdgeAdvisor.hpp
safe_dds/edge/include/safe_edge/edge_module/nodes/: EdgeGatewayNode.hpp
safe_dds/edge/src/apps/: edge_gateway_main.cpp
safe_dds/edge/src/common/: HeaderFactory.cpp
safe_dds/edge/src/logic/: EdgeAdvisor.cpp
safe_dds/edge/src/nodes/: EdgeGatewayNode.cpp
safe_dds/edge/test/: test_edge_integration.cpp
safe_dds/idl/: SafeDDSGenAux.hpp  SafeDDSGenTypeTraits.hpp  SafeDDSGenUtils.hpp  common.hpp  edge.hpp  internal.hpp  pilot_server.hpp
safe_dds/non_safety/: CMakeLists.txt
safe_dds/non_safety/include/safe_edge/non_safety_domain/common/: HeaderFactory.hpp  RuntimeConfig.hpp  TopicNames.hpp
safe_dds/non_safety/include/safe_edge/non_safety_domain/nodes/: CloudGatewayNode.hpp  InfotainmentNode.hpp  OtaServiceNode.hpp
safe_dds/non_safety/src/apps/: cloud_gateway_main.cpp  infotainment_main.cpp  ota_service_main.cpp
safe_dds/non_safety/src/common/: HeaderFactory.cpp  RuntimeConfig.cpp  TopicNames.cpp
safe_dds/non_safety/src/nodes/: CloudGatewayNode.cpp  InfotainmentNode.cpp  OtaServiceNode.cpp
safe_dds/safety/: CMakeLists.txt
safe_dds/safety/include/safe_edge/safety_domain/common/: HeaderFactory.hpp  RuntimeConfig.hpp  TopicNames.hpp
safe_dds/safety/include/safe_edge/safety_domain/nodes/: PolicyEngineNode.hpp  SafetyIoAdaptersNode.hpp  VehicleMockNode.hpp
safe_dds/safety/include/safe_edge/safety_domain/policy/: IdlAdapters.hpp  PolicyEngine.hpp  PolicyTypes.hpp
safe_dds/safety/src/apps/: policy_engine_main.cpp  safety_io_adapters_main.cpp  vehicle_mock_main.cpp
safe_dds/safety/src/common/: HeaderFactory.cpp  RuntimeConfig.cpp  TopicNames.cpp
safe_dds/safety/src/nodes/: PolicyEngineNode.cpp  SafetyIoAdaptersNode.cpp  VehicleMockNode.cpp
safe_dds/safety/src/policy/: IdlAdapters.cpp  PolicyEngine.cpp
safe_dds/server/: CMakeLists.txt
safe_dds/server/include/safe_edge/server/common/: PilotServerPublishHelper.hpp
safe_dds/server/include/safe_edge/server/nodes/: ServerNode.hpp
safe_dds/server/src/apps/: server_main.cpp
safe_dds/server/src/common/: PilotServerPublishHelper.cpp
safe_dds/server/src/nodes/: ServerNode.cpp
safe_dds/server/test/: test_server_integration.cpp
scripts/: build_native.sh  build_qnx.sh  build_safedds_qnx.sh  build_ubuntu.sh  check_setup.sh  env.example  launch_all.sh  launch_fast_edge.sh  launch_fast_edge_test.sh  launch_fast_server.sh  launch_fast_server_test.sh  launch_hypervisor_nodes.sh  launch_hypervisor_split.sh  launch_tests.sh  launch_tpi_2_1_test.sh  launch_tpi_2_2_test.sh  launch_tpi_2_3_test.sh  launch_tpi_2_5_test.sh  launch_tpi_2_6_test.sh  launch_tpi_3_1_test.sh  launch_tpi_3_2_test.sh  launch_tpi_3_3_test.sh  launch_tpi_3_4_test.sh  test_output_common.sh
scripts/web/: safe_edge_dashboard.py
